# EmojiKitchen

./: .gitignore  AGENT.md  EXAMPLES.md  README.md  TODOS.md  main.py  pyproject.toml  run_test.py  test_emojis_250.txt
Docs/Original/EmojiKitchen/: EXTRAS.md
Docs/Original/EmojiKitchen/Research/: 03_Performance_Async_Patterns.md  README.md
EmojiKitchen/: PROJECT_SPEC.md  SUMMARY.md  TEAM_ACTION_PLAN.md
EmojiKitchen/Research/: 00_QUICK_START_GUIDE.md  01_API_Research.md  02_Python_Emoji_Handling.md  04_Implementation_Recommendations.md  README.md
Scripts/: bulk_download.py  run_test.py
logs/: failures_20251119_090219.json  successes_20251119_090219.json  successes_20251119_131715.json  summary_20251119_131715.json
src/emoji_kitchen/: __init__.py  __main__.py  cli.py  orchestrator.py
src/emoji_kitchen/api/: client.py  metadata.py
src/emoji_kitchen/storage/: manager.py  paths.py
src/emoji_kitchen/utils/: emoji_utils.py  json_logger.py  reporting.py  validators.py
